--- a/ifac_si_app/src/app/component/my-publications/my-publications.component.html
+++ b/ifac_si_app/src/app/component/my-publications/my-publications.component.html
@@ -40,7 +40,7 @@
                         </div>
                     </div>
                     <div class="postData">
-                        <p> {{post.titulo}} </p>
+                        <h4> {{post.titulo}} </h4>
                         <p> {{post.data | date: 'dd/MM/yyyy'}} </p>
                     </div>
                 </div>
