refactor and feat: Começando a adicionando o gerenciamento de rascunho

--- a/ifac_si_app/src/app/component/trash-view/trash-view.component.html
+++ b/ifac_si_app/src/app/component/trash-view/trash-view.component.html
@@ -1,6 +1,6 @@
 <div class="page-background">
     <section>
-        <h6><i class="bi bi-info-circle"></i> Itens excluídos são mantidos por 30 dias antes da remoção permanentes</h6>
+        <h6><i class="bi bi-info-circle"></i> Itens arquivados são mantidos por 30 dias antes da remoção permanentes</h6>
     </section>
 
     <div class="viewPost">
