--- a/ifac_si_app/src/app/component/my-publications/my-publications.component.css
+++ b/ifac_si_app/src/app/component/my-publications/my-publications.component.css
@@ -130,6 +130,7 @@ background:
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
     /* padding-left: 20px; */
     margin: 20px auto;
     padding: 0 40px;
