refactor: Arrumando alguns problemas com o javascript do bootstrap, juntamente com problemas css do accordion do add-new-post, além de deixar a edição e visualização funcionais (aparentemente)

--- a/ifac_si_app/src/app/component/add-new-post/add-new-post.component.css
+++ b/ifac_si_app/src/app/component/add-new-post/add-new-post.component.css
@@ -126,12 +126,12 @@ button.editButton {
 } */
 
 #collapseThree.collapse.show {
-    overflow: visible;
+    overflow: hidden;
     height: auto;
 }
 
 #collapseThree.collapsing {
-    overflow: visible;
+    overflow: hidden;
 }
 
 .card-body {
