--- a/static/css/tables.css
+++ b/static/css/tables.css
@@ -1,21 +1,21 @@
-/* Tabelas com colunas alinhadas (exceto a última) */
-.content table:not(:last-of-type) {
+/* Tabelas da matriz curricular com colunas alinhadas */
+.matriz-curricular table {
 	table-layout: fixed;
 	width: 100%;
 }
 
 /* Larguras das colunas */
-.content table:not(:last-of-type) th:nth-child(1),
-.content table:not(:last-of-type) td:nth-child(1) {
+.matriz-curricular table th:nth-child(1),
+.matriz-curricular table td:nth-child(1) {
 	width: 120px; /* Código */
 }
 
-.content table:not(:last-of-type) th:nth-child(3),
-.content table:not(:last-of-type) td:nth-child(3) {
+.matriz-curricular table th:nth-child(3),
+.matriz-curricular table td:nth-child(3) {
 	width: 70px; /* CH */
 }
 
-.content table:not(:last-of-type) th:nth-child(4),
-.content table:not(:last-of-type) td:nth-child(4) {
+.matriz-curricular table th:nth-child(4),
+.matriz-curricular table td:nth-child(4) {
 	width: 120px; /* Pré-requisito */
 }
